wip: migrating to code-generated via openapi
